--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<style>
 		body {
-			background: url(khan1.jpg) no-repeat center center fixed; 
+			background: url('khan1.jpg') no-repeat center center fixed; 
  		 -webkit-background-size: cover;
  		 -moz-background-size: cover;
  		 -o-background-size: cover;
