--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<style>
 		body {
-			background: url('khan1.jpg') no-repeat center center fixed; 
+			background: url(https://scontent.fbom1-2.fna.fbcdn.net/v/t1.0-9/10561524_486753438128930_962501160652244405_n.jpg?oh=17762e47e8df18093b2dd88e0fc84f7d&oe=5839A1F5) no-repeat center center fixed; 
  		 -webkit-background-size: cover;
  		 -moz-background-size: cover;
  		 -o-background-size: cover;
