--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	</p>
 
 	<p>
-		This is exactly what I wanna say every night. Thanks for being patient with me.
+		Thanks for being so patient,awesome and so so incredibly hot :P
 	</p>
 	</div>
 </body>
