--- a/index.html
+++ b/index.html
@@ -1,7 +1,55 @@
 <html>
 
-<head>
+
+	<head>
 	<style>
+		body {
+			background: url(https://scontent.fbom1-2.fna.fbcdn.net/v/t1.0-9/10561524_486753438128930_962501160652244405_n.jpg?oh=17762e47e8df18093b2dd88e0fc84f7d&oe=5839A1F5) no-repeat center center fixed; 
+ 		 -webkit-background-size: cover;
+ 		 -moz-background-size: cover;
+ 		 -o-background-size: cover;
+ 		 background-size: cover;
+		}
+
+		h1 {
+			color: white;
+			font-family: "Comic Sans MS", cursive, sans-serif;
+			font-weight: 400;
+			font-size: 60px;
+			margin: 10px;
+		}
+		p {
+			color: white;
+			font-family: "Comic Sans MS", cursive, sans-serif;
+			font-weight: 200;
+			
+			margin: 20px;
+		}
+
+		.Mine {
+			background-color: rgba(0,0,0,0.5 );
+			padding: 100px;
+			width: 600px;
+			margin: 50px auto;
+			text-align: center;
+		}
+	</style>
+
+</head>
+
+
+<body>
+<div class="Mine">
+	<h1>Mi amor</h1>
+
+	<p>
+		I think about you every night before I go to sleep. I imagine you are here with me. With one arm around me. Then you kiss my neck and we fell asleep like that. It helps me sleep.
+	</p>
+
+	<p>
+		This is exactly what I wanna say every night. Thanks for being patient with me.
+	</p>
+	</div>
 	
 </body>
 </html>
