--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <body>
 <div class="Mine">
-	<h1>Mi amor</h1>
+	<h1>Mi amor <3</h1>
 
 	<p>
 		I think about you every night before I go to sleep. I imagine you are here with me. With one arm around me. Then you kiss my neck and we fell asleep like that. It helps me sleep.
