--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	</p>
 
 	<p>
-		This is exactly what I wanna say every night. Thanks for being patient with me.
+		Stop being so damn hot. It's a very distracting.  
 	</p>
 	</div>
 	
