--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	</p>
 
 	<p>
-		Stop being so damn hot. It's a very distracting.  
+		Stop being so damn hot.. It's very distracting.  
 	</p>
 	</div>
 	
