--- a/index.html
+++ b/index.html
@@ -42,9 +42,15 @@
 <div class="Mine">
 	<h1>Mi amor <3</h1>
 
-	<p>
-		Je aime la garcon!
+
+<p>
+		I think about you every night before I go to sleep. I imagine you are here with me. With one arm around me. Then you kiss my neck and we fell asleep like that. It helps me sleep.
 	</p>
+
+	<p>
+		Stop being so damn hot.. It's very distracting.  
+	</p>
+
 	</div>
 	
 </body>
