--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	</p>
 
 	<p>
-		Stop being so damn hot.. It's very distracting.  
+		I'm addicted to the way i feel when I'm thinking about you. I really should stop overthinking. Who knows, it might workout after all.
 	</p>
 
 	</div>
