--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
 
 
 <p>
-		I think about you every night before I go to sleep. I imagine you are here with me. With one arm around me. Then you kiss my neck and we fell asleep like that. It helps me sleep.
-	</p>
-
+		As clichéd as it sounds, you really do make my world go round! You make me laugh , you make me talk, you understand my obsession for random things; you make effort and take some time to talk  to me.
+		</p>
 	<p>
 		I'm addicted to the way i feel when I'm thinking about you. I really should stop overthinking. Who knows, it might workout after all.
 	</p>
