--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		As clichéd as it sounds, you really do make my world go round! You make me laugh , you make me talk, you understand my obsession for random things; you make effort and take some time to talk  to me.
 		</p>
 	<p>
-		I'm addicted to the way i feel when I'm thinking about you. I really should stop overthinking. Who knows, it might workout after all.
+		I'm addicted to the way i feel when I'm thinking about you. I really should stop overthinking. Who knows, things might workout after all.
 	</p>
 
 	</div>
