--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		As clichéd as it sounds, you really do make my world go round! You make me laugh , you make me talk, you understand my obsession for random things; you make effort and take some time to talk  to me.
 		</p>
 	<p>
-		I'm addicted to the way i feel when I'm thinking about you. I really should stop overthinking. Who knows, things might workout after all.
+		It's just been two days since i talked to you. But,i feel like I've not talked for a while. Anyway..... when ever you call, it makes everything in this world beautiful again. 
 	</p>
 
 	</div>
