--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<br />
 
 			<a href="https://www.facebook.com/akhiladevi.devabhaktuni">
-				<img src="fb.jpg" />
+				<img src="https://www.facebook.com/photo.php?fbid=2009978329121219&set=a.115850148534056&type=3&theater" />
 			</a>
 
 		</div>
