--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <html>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<a href="#" class="fa fa-facebook"></a>
 	<head>
 	<style>
 		body {
@@ -32,6 +34,25 @@
 			margin: 30px auto	;
 			text-align: center;
 		}
+		.fa {
+  			padding: 20px;
+  			font-size: 30px;
+  			width: 50px;
+  			text-align: center;
+  			text-decoration: none;
+			border-radius: 50%;
+			}
+
+			/* Add a hover effect if you want */
+		.fa:hover {
+  			opacity: 0.7;
+			}
+
+			/* Facebook */
+		.fa-facebook {
+  			background: #3B5998;
+  			color: white;
+			}
 	</style>
 	</head>
 
@@ -56,8 +77,7 @@
 			<br />
 			<br />
 
-			<a href="https://www.facebook.com/akhiladevi.devabhaktuni">
-				<img src="https://www.facebook.com/photo.php?fbid=2009978329121219&set=a.115850148534056&type=3&theater" />
+			<a href="https://www.facebook.com/akhiladevi.devabhaktuni" class="fa fa-facebook">
 			</a>
 
 		</div>
