--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 			<br />
 
 			<a href="https://www.facebook.com/akhiladevi.devabhaktuni" class="fa fa-facebook">
+				<img src="ProfilePic.jpg" style="width:42px;height:42px;border:0;">
 			</a>
 
 		</div>
