--- a/index.html
+++ b/index.html
@@ -1,85 +1,107 @@
 <html>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<head>
-	<style>
-		body {
-			background: url('me.jpg') no-repeat center center fixed; 
- 		 -webkit-background-size: cover;
- 		 -moz-background-size: cover;
- 		 -o-background-size: cover;
- 		 background-size: cover;;
-		}
-
-		h1 {
-			color: white;
-			font-family: 'Helvetica Neue',Helvetica;
-			font-weight: 800;
-			font-size: 60px;
-			margin: 10px;
-		}
-
-		p {
-			color: white;
-			font-family: 'Helvetica Neue',Helvetica;
-			font-weight: 200;
-			
-			margin: 20px;
-		}
-
-		.box {
-			background-color: rgba(0,0,0,0.5 );
-			padding: 100px;
-			width: 600px;
-			margin: 30px auto	;
-			text-align: center;
-		}
-		.fa {
-  			padding: 20px;
-  			font-size: 30px;
-  			width: 50px;
-  			text-align: center;
-  			text-decoration: none;
-			border-radius: 50%;
-			}
-
-			/* Add a hover effect if you want */
-		.fa:hover {
-  			opacity: 0.7;
-			}
-
-			/* Facebook */
-		.fa-facebook {
-  			background: #3B5998;
-  			color: white;
-			}
-	</style>
-	</head>
-
-	<body>
-	<div class="box">
-			<h1>Akhila Devi</h1>
-
-			<p>
-				<i>Web Developer</i>
-			</p>
-
-			<p>
-				I'm a fourth year undergrad. Interested in Big Data Analysis. Taking one step at a time to achieve that.
-			</p>
-
-
-			<p>
-			I'm very tenacious and hard working.
-			</p>
-
-			<br />
-			<br />
-			<br />
-
-			<a href="https://www.facebook.com/akhiladevi.devabhaktuni" class="fa fa-facebook">
-			</a>
-
-		</div>
-	</body>
-
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   <head>
+      <style>
+         body {
+         background: url('me.jpg') no-repeat center center fixed; 
+         -webkit-background-size: cover;
+         -moz-background-size: cover;
+         -o-background-size: cover;
+         background-size: cover;;
+         }
+         h1 {
+         color: white;
+         font-family: 'Helvetica Neue',Helvetica;
+         font-weight: 800;
+         font-size: 60px;
+         margin: 10px;
+         }
+         p {
+         color: white;
+         font-family: 'Helvetica Neue',Helvetica;
+         font-weight: 200;
+         margin: 20px;
+         }
+         .box {
+         background-color: rgba(0,0,0,0.5 );
+         padding: 100px;
+         width: 600px;
+         margin: 30px auto	;
+         text-align: center;
+         }
+         .fa {
+         padding: 20px;
+         font-size: 30px;
+         width: 50px;
+         text-align: center;
+         text-decoration: none;
+         border-radius: 50%;
+         }
+         /* Add a hover effect if you want */
+         .fa:hover {
+         opacity: 0.7;
+         }
+         /* Facebook */
+         .fa-facebook {
+         background: #3B5998;
+         color: white;
+         }
+         /* Style the tab */
+         .tab {
+         overflow: hidden;
+         border: 1px solid #ccc;
+         background-color: #f1f1f1;
+         }
+         /* Style the buttons that are used to open the tab content */
+         .tab button {
+         background-color: inherit;
+         float: left;
+         border: none;
+         outline: none;
+         cursor: pointer;
+         padding: 14px 16px;
+         transition: 0.3s;
+         }
+         /* Change background color of buttons on hover */
+         .tab button:hover {
+         background-color: #ddd;
+         }
+         /* Create an active/current tablink class */
+         .tab button.active {
+         background-color: #ccc;
+         }
+         /* Style the tab content */
+         .tabcontent {
+         display: none;
+         padding: 6px 12px;
+         border: 1px solid #ccc;
+         border-top: none;
+         }
+      </style>
+   </head>
+   <body>
+      <div class="tab">
+         <button class="tablinks">London</button>
+         <button class="tablinks">Paris</button>
+         <button class="tablinks">Tokyo</button>
+      </div>
+      <div class="box">
+         <h1>Akhila Devi</h1>
+         <p>
+            <i>Web Developer</i>
+         </p>
+         <p>
+            I'm a fourth year undergrad. Interested in Big Data Analysis. Taking one step at a time to achieve that.
+         </p>
+         <p>
+            I'm very tenacious and hard working.
+         </p>
+         <br />
+         <br />
+         <br />
+         <a href="https://www.facebook.com/akhiladevi.devabhaktuni" class="fa fa-facebook">
+         </a>
+      </div>
+   </body>
+<script type="text/javascript" src="index.js"></script>
 </html>
