--- a/index.html
+++ b/index.html
@@ -81,9 +81,26 @@
    </head>
    <body>
       <div class="tab">
-         <button class="tablinks">London</button>
-         <button class="tablinks">Paris</button>
-         <button class="tablinks">Tokyo</button>
+         <button class="tablinks" onclick="deadlines()">Dead Lines</button>
+         <button class="tablinks" onclick="academics()">Academics</button>
+         <button class="tablinks" onclick="selfstudy()">Self Study</button>
+         <button class="tablinks" onclick="contactinfo()">Contact Information</button>
+      </div>
+      <div id="Deadlines" class="tabcontent">
+         <h3>Approaching Deadlines</h3>
+         <p>This includes deadlines of homework, assignments and exams</p>
+      </div>
+      <div id="Academics" class="tabcontent">
+         <h3>Academics</h3>
+         <p>This includes the ongoings of classes, any doubts or topics I nwish to revisit. Or self notes and study material.</p>
+      </div>
+      <div id="selfStudy" class="tabcontent">
+         <h3>Self study</h3>
+         <p>This includes personal study material regarding both academic and entertainment.</p>
+      </div>
+      <div id="contactInfo" class="tabcontent">
+         <h3>Personal contact information</h3>
+         <p>This just has my personal conatct information.</p>
       </div>
       <div class="box">
          <h1>Akhila Devi</h1>
