--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
    </head>
    <body>
       <div class="tab">
-         <button class="tablinks" onclick="deadlines(evt)">Dead Lines</button>
-         <button class="tablinks" onclick="academics(evt)">Academics</button>
-         <button class="tablinks" onclick="selfstudy(evt)">Self Study</button>
-         <button class="tablinks" onclick="contactinfo(evt)">Contact Information</button>
+         <button class="tablinks" onclick="eventdirect(evt,'Deadlines')">Dead Lines</button>
+         <button class="tablinks" onclick="eventdirect(evt,'Academics')">Academics</button>
+         <button class="tablinks" onclick="eventdirect(evt, 'selfStudy')">Self Study</button>
+         <button class="tablinks" onclick="eventdirect(evt, 'contactInfo')">Contact Information</button>
       </div>
       <div id="Deadlines" class="tabcontent">
          <h3>Approaching Deadlines</h3>
