--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
    <head>
       <style>
          body {
