--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
    </head>
    <body>
       <div class="tab">
-         <button class="tablinks" onclick="eventdirect(evt,'Deadlines')">Dead Lines</button>
-         <button class="tablinks" onclick="eventdirect(evt,'Academics')">Academics</button>
-         <button class="tablinks" onclick="eventdirect(evt, 'selfStudy')">Self Study</button>
-         <button class="tablinks" onclick="eventdirect(evt, 'contactInfo')">Contact Information</button>
+         <button class="tablinks" onclick="eventdirect(event,'Deadlines')">Dead Lines</button>
+         <button class="tablinks" onclick="eventdirect(event,'Academics')">Academics</button>
+         <button class="tablinks" onclick="eventdirect(event, 'selfStudy')">Self Study</button>
+         <button class="tablinks" onclick="eventdirect(event, 'contactInfo')">Contact Information</button>
       </div>
       <div id="Deadlines" class="tabcontent">
          <h3>Approaching Deadlines</h3>
