--- a/index.html
+++ b/index.html
@@ -87,19 +87,19 @@
          <button class="tablinks" onclick="eventdirect(event, 'selfStudy')">Self Study</button>
          <button class="tablinks" onclick="eventdirect(event, 'contactInfo')">Contact Information</button>
       </div>
-      <div id="Deadlines" class="tabcontent">
+      <div id="Deadlines" class="tabcontent box">
          <h3>Approaching Deadlines</h3>
          <p>This includes deadlines of homework, assignments and exams</p>
       </div>
-      <div id="Academics" class="tabcontent">
+      <div id="Academics" class="tabcontent box">
          <h3>Academics</h3>
          <p>This includes the ongoings of classes, any doubts or topics I nwish to revisit. Or self notes and study material.</p>
       </div>
-      <div id="selfStudy" class="tabcontent">
+      <div id="selfStudy" class="tabcontent box">
          <h3>Self study</h3>
          <p>This includes personal study material regarding both academic and entertainment.</p>
       </div>
-      <div id="contactInfo" class="tabcontent">
+      <div id="contactInfo" class="tabcontent box">
          <h3>Personal contact information</h3>
          <p>This just has my personal conatct information.</p>
       </div>
