--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
          <h3>Personal contact information</h3>
          <p>This just has my personal conatct information.</p>
       </div>
-      <div class="box">
+      <div class="box" id="mainInfo">
          <h1>Akhila Devi</h1>
          <p>
             <i>Web Developer</i>
