--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@
       <div id="contactInfo" class="tabcontent box">
          <h3>Personal contact information</h3>
          <p>This just has my personal conatct information.</p>
+         <ul>
+            <li>Mobile No: (757)-693-1846</li>
+            <li>Mail ID: akhiladevi95@gmail.com</li>
+            <li>Facebook ID: Akhila Devabhaktuni</li>
+         </ul>
       </div>
       <div class="box" id="mainInfo">
          <h1>Akhila Devi</h1>
