--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
          border: 1px solid #ccc;
          border-top: none;
          }
+         ul {
+         list-style-type: none;
+         }
       </style>
    </head>
    <body>
