--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
    </head>
    <body>
       <div class="tab">
+         <button class="tablinks" onclick="eventdirect(event,'Akhila')">AKHILA DEVABHAKTUNI</button>
          <button class="tablinks" onclick="eventdirect(event,'Deadlines')">Dead Lines</button>
          <button class="tablinks" onclick="eventdirect(event,'Academics')">Academics</button>
          <button class="tablinks" onclick="eventdirect(event, 'selfStudy')">Self Study</button>
