--- a/index.html
+++ b/index.html
@@ -113,15 +113,15 @@
          </ul>
       </div>
       <div class="box" id="mainInfo">
-         <h1>Akhila Devi</h1>
+         <h1>Akhila Devabhaktuni</h1>
          <p>
-            <i>Web Developer</i>
+            <i></i>
          </p>
          <p>
-            I'm a fourth year undergrad. Interested in Big Data Analysis. Taking one step at a time to achieve that.
+            "In your actions, don’t procrastinate. In your conversations, don’t confuse. In your thoughts, don’t wander. In your soul, don’t be passive or aggressive. In your life, don’t be all about business."
          </p>
          <p>
-            I'm very tenacious and hard working.
+             Marcus Aurelius
          </p>
          <br />
          <br />
