--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
          </ul>
       </div>
       <div class="box" id="mainInfo">
-         <h1>Akhila Devabhaktuni</h1>
+         <h1>Que sera sera</h1>
          <p>
             <i></i>
          </p>
