--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
       <div id="Deadlines" class="tabcontent box">
          <h3>Approaching Deadlines</h3>
          <p>This includes deadlines of homework, assignments and exams</p>
+         <ul>
+            <li>Data Intensive computing: Checkout Amazon AWS </li>
+            <li>Tensor flow for Machine Learning</li>
+         </ul>
       </div>
       <div id="Academics" class="tabcontent box">
          <h3>Academics</h3>
