--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
          <button class="tablinks" onclick="eventdirect(event,'Deadlines')">Dead Lines</button>
          <button class="tablinks" onclick="eventdirect(event,'Academics')">Academics</button>
          <button class="tablinks" onclick="eventdirect(event, 'selfStudy')">Self Study</button>
+         <button class="tablinks" onclick="eventdirect(event, 'goals')">Goals</button>
          <button class="tablinks" onclick="eventdirect(event, 'contactInfo')">Contact Information</button>
       </div>
       <div id="Deadlines" class="tabcontent box">
@@ -106,6 +107,11 @@
       <div id="selfStudy" class="tabcontent box">
          <h3>Self study</h3>
          <p>This includes personal study material regarding both academic and entertainment.</p>
+      </div>
+      <div id="goals" class="tabcontent box">
+         <h3>Defining characteristics of an organism is STRIVING.</h3>
+         <p>This includes goals both active and inactive.</p>
+         <p>This includes goals both academic and personal.</p>
       </div>
       <div id="contactInfo" class="tabcontent box">
          <h3>Personal contact information</h3>
