--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@
          <button class="tablinks" onclick="eventdirect(event, 'contactInfo')">Contact Information</button>
       </div>
       <div id="Deadlines" class="tabcontent box">
+         <div class="sidenav">
+            <a href="#">About</a>
+            <a href="#">Services</a>
+            <a href="#">Clients</a>
+            <a href="#">Contact</a>
+         </div>
          <h3>Approaching Deadlines</h3>
          <p>This includes deadlines of homework, assignments and exams</p>
          <ul>
