--- a/index.html
+++ b/index.html
@@ -94,10 +94,9 @@
       </div>
       <div id="Deadlines" class="tabcontent box">
          <div class="sidenav">
-            <a href="#">About</a>
-            <a href="#">Services</a>
-            <a href="#">Clients</a>
-            <a href="#">Contact</a>
+            <a href="#">Academics</a>
+            <a href="#">Self assigned challenges</a>
+            <a href="#">Personal</a>
          </div>
          <h3>Approaching Deadlines</h3>
          <p>This includes deadlines of homework, assignments and exams</p>
