--- a/index.html
+++ b/index.html
@@ -93,12 +93,15 @@
          <button class="tablinks" onclick="eventdirect(event, 'contactInfo')">Contact Information</button>
       </div>
       <div id="Deadlines" class="tabcontent box">
+         <h3>Approaching Deadlines</h3>
          <div class="sidenav">
-            <a href="#">Academics</a>
+            <a href="#acad_deadlines">Academics</a>
             <a href="#">Self assigned challenges</a>
             <a href="#">Personal</a>
          </div>
-         <h3>Approaching Deadlines</h3>
+         <div id="acad_deadlines">
+            <p>Academic Deadlines</p>
+         </div>
          <p>This includes deadlines of homework, assignments and exams</p>
          <ul>
             <li>Data Intensive computing: Checkout Amazon AWS </li>
