--- a/index.html
+++ b/index.html
@@ -130,17 +130,25 @@
          <h3>Approaching Deadlines</h3>
          <div class="sidenav">
             <a href="#acad_deadlines">Academics</a>
-            <a href="#">Self assigned challenges</a>
+            <a href="#" onclick="selfchal()">Self assigned challenges</a>
             <a href="#">Personal</a>
          </div>
          <div id="acad_deadlines">
             <p>Academic Deadlines</p>
-         </div>
-         <p>This includes deadlines of homework, assignments and exams</p>
+            <p>This includes deadlines of homework, assignments and exams</p>
          <ul>
             <li>Data Intensive computing: Checkout Amazon AWS </li>
             <li>Tensor flow for Machine Learning</li>
          </ul>
+         </div>
+         <div id="selfChal">
+            <ul>
+               <li>Machine Learning book in MIT challenge</li>
+               <li>Python for machine learning</li>
+               <li>R for Data Science book</li>
+               <li>Chackout hadley whickham books</li>
+            </ul>
+         </div>
       </div>
       <div id="Academics" class="tabcontent box">
          <h3>Academics</h3>
