--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <li>Tensor flow for Machine Learning</li>
          </ul>
          </div>
-         <div id="selfChal">
+         <div id="selfChal" style="display:none">
             <ul>
                <li>Machine Learning book in MIT challenge</li>
                <li>Python for machine learning</li>
