--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       <div id="Deadlines" class="tabcontent box">
          <h3>Approaching Deadlines</h3>
          <div class="sidenav">
-            <a href="#acad_deadlines">Academics</a>
+            <a href="#" onclick="acad_deadline()">Academics</a>
             <a href="#" onclick="selfchal()">Self assigned challenges</a>
             <a href="#">Personal</a>
          </div>
