--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <a href="#">Personal</a>
          </div>
          <div id="acad_deadlines">
-            <p>Academic Deadlines</p>
+            <p style="color:white;">Academic Deadlines</p>
             <p>This includes deadlines of homework, assignments and exams</p>
          <ul>
             <li>Data Intensive computing: Checkout Amazon AWS </li>
@@ -142,7 +142,7 @@
          </ul>
          </div>
          <div id="selfChal" style="display:none">
-            <ul>
+            <ul style="color:white; text-align:left;">
                <li>Machine Learning book in MIT challenge</li>
                <li>Python for machine learning</li>
                <li>R for Data Science book</li>
