--- a/index.html
+++ b/index.html
@@ -152,6 +152,11 @@
       </div>
       <div id="Academics" class="tabcontent box">
          <h3>Academics</h3>
+         <div class="sidenav">
+            <a href="#" onclick="mech_learn()">Machine Learning</a>
+            <a href="#" onclick="selfchal()">Self assigned challenges</a>
+            <a href="#">Personal</a>
+         </div>
          <p>This includes the ongoings of classes, any doubts or topics I nwish to revisit. Or self notes and study material.</p>
       </div>
       <div id="selfStudy" class="tabcontent box">
