--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
          <h3>Academics</h3>
          <div class="sidenav">
             <a href="#" onclick="mech_learn()">Machine Learning</a>
-            <a href="#" onclick="selfchal()">Self assigned challenges</a>
-            <a href="#">Personal</a>
+            <a href="#" onclick="dic()">Data Intensive computing</a>
+            <a href="#" onclick="sdm2()">Statistical Data Mining 2</a>
          </div>
          <p>This includes the ongoings of classes, any doubts or topics I nwish to revisit. Or self notes and study material.</p>
       </div>
