--- a/index.html
+++ b/index.html
@@ -161,6 +161,11 @@
       </div>
       <div id="selfStudy" class="tabcontent box">
          <h3>Self study</h3>
+         <div class="sidenav">
+            <a href="#" onclick="uni_topic()">Unique Topics</a>
+            <a href="#" onclick="corbooks()">Course Books</a>
+            <a href="#" onclick="art_pap()">Papers and articles</a>
+         </div>
          <p>This includes personal study material regarding both academic and entertainment.</p>
       </div>
       <div id="goals" class="tabcontent box">
