--- a/index.html
+++ b/index.html
@@ -173,6 +173,11 @@
          <p>This includes goals both active and inactive.</p>
          <p>This includes goals both academic and personal.</p>
       </div>
+      <div id="justlit" class="tabcontent box">
+         <h3>Literature and literature only.</h3>
+         <p>Book reviews and things I like. I need to write a databas for this.</p>
+         <p>I wanna experiment with new databases.</p>
+      </div>
       <div id="contactInfo" class="tabcontent box">
          <h3>Personal contact information</h3>
          <p>This just has my personal conatct information.</p>
