--- a/index.html
+++ b/index.html
@@ -157,6 +157,17 @@
             <a href="#" onclick="dic()">Data Intensive computing</a>
             <a href="#" onclick="sdm2()">Statistical Data Mining 2</a>
          </div>
+         <div id="mec_tab" style="display:none">
+            <p>Machine Learning</p>
+            <p>Weekly Review</p>
+            <button onclick="mec_oic()">Ongoing in class</button>
+            <button onclick="mec_ss()">Self study</button>
+            <button onclick="mec_final()">Resources</button>
+            <button onclick="mec_ass()">Assignments</button>
+            <button onclick="mec_pro()">Projects</button>
+            <button onclick="mec_mid()">Mid Sem Exam</button>
+            <button onclick="mec_final()">Final Exam</button>
+         </div>
          <div id="dic_tab" style="display:none">
             <p>Data Intensive Computing</p>
             <p>Weekly Review</p>
@@ -166,6 +177,17 @@
             <button onclick="dic_pro()">Projects</button>
             <button onclick="dic_mid()">Mid Sem Exam</button>
             <button onclick="dic_final()">Final Exam</button>
+         </div>
+         <div id="sdm_tab" style="display:none">
+            <p>Statistical Data Mining</p>
+            <p>Weekly Review</p>
+            <button onclick="sdm_oic()">Ongoing in class</button>
+            <button onclick="sdm_ss()">Self study</button>
+            <button onclick="sdm_final()">Resources</button>
+            <button onclick="sdm_ass()">Assignments</button>
+            <button onclick="sdm_pro()">Projects</button>
+            <button onclick="sdm_mid()">Mid Sem Exam</button>
+            <button onclick="sdm_final()">Final Exam</button>
          </div>
       </div>
       <div id="selfStudy" class="tabcontent box">
