--- a/index.html
+++ b/index.html
@@ -151,11 +151,14 @@
          </div>
       </div>
       <div id="Academics" class="tabcontent box">
-         <h3>Academics</h3>
          <div class="sidenav">
+            <a href="#" onclick="acad_home()">Home</a>
             <a href="#" onclick="mech_learn()">Machine Learning</a>
             <a href="#" onclick="dic()">Data Intensive computing</a>
             <a href="#" onclick="sdm2()">Statistical Data Mining 2</a>
+         </div>
+         <div id="acad_home">
+            <p>Academics</p>
          </div>
          <div id="mec_tab" style="display:none">
             <p>Machine Learning</p>
