--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
          </a>
       </div>
       <div class="box" id="mainInfo">
-         <h1>Que sera sera</h1>
+         <h1>Be afraid ut don't let it control you.</h1>
          <p>
             <i></i>
          </p>
