--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
          </a>
       </div>
       <div class="box" id="mainInfo">
-         <h1>Be afraid ut don't let it control you.</h1>
+         <h1>Be afraid, but don't let it control you.</h1>
          <p>
             <i></i>
          </p>
