--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <button onclick="dic_final()">Final Exam</button>
          </div>
          <div id="sdm_tab" style="display:none">
-            <p>Statistical Data Mining</p>
+            <h2 style="color:white;">Statistical Data Mining</h2>
             <p>Weekly Review</p>
             <button onclick="sdm_oic()">Ongoing in class</button>
             <button onclick="sdm_ss()">Self study</button>
@@ -200,8 +200,8 @@
             <button onclick="sdm_mid()">Mid Sem Exam</button>
             <button onclick="sdm_final()">Final Exam</button>
             <div id="sdm_ss" style="display:none;">
-               <h3>Week:2(Self study)</h3>
-               <ul>
+               <h3 style="color:white;">Week:2(Self study)</h3>
+               <ul style="color:white; text-align:left;">
                   <li>Research papers Arules and bump hunting.</li>
                   <li>Chapter 14(Association rules), CART chapter Introduction to statistical Learning.</li>
                </ul>
