--- a/index.html
+++ b/index.html
@@ -217,6 +217,9 @@
             <button onclick="dmq_pro()">Projects</button>
             <button onclick="dmq_mid()">Mid Sem Exam</button>
             <button onclick="dmq_final()">Final Exam</button>
+            <div id="dmq_oic" style="display:none;">
+               <p>Chapter 1 till, advantages of database managment systems.</p>
+            </div>
             <div id="dmq_ss" style="display:none;">
                <h3>Week:2</h3>
                <ul>
