--- a/index.html
+++ b/index.html
@@ -204,6 +204,9 @@
                <ul style="color:white; text-align:left;">
                   <li>Research papers Arules and bump hunting.</li>
                   <li>Chapter 14(Association rules), CART chapter Introduction to statistical Learning.</li>
+                  <li>CART chapter revise</li>
+                  <li>T tests, AIC, BIC, Bagging, Boosting, Bootstrapping.</li>
+                  <li>Netflix datascience positions.</li>
                </ul>
             </div>
          </div>
@@ -224,6 +227,7 @@
                <h3>Week:2</h3>
                <ul>
                   <li>Research papers Arules and bump hunting.</li>
+                  <li>Chapter1, data models and layers.</li>
                </ul>
             </div>
          </div>
