--- a/index.html
+++ b/index.html
@@ -171,6 +171,31 @@
             <button onclick="mec_pro()">Projects</button>
             <button onclick="mec_mid()">Mid Sem Exam</button>
             <button onclick="mec_final()">Final Exam</button>
+            <div id="mec_ass" style="display:none;">
+               <h6 style="color:white">Assignments</h6>
+               <ul style="text-align:left;">
+                  <li>Assignment1: </li>
+                  <li>Assignment2: </li>
+                  <li>Assignment3: </li>
+               </ul>
+               </br>
+            <h6 style="color:white">Weekly Quiz</h6>
+               <ul style="text-align:left;">
+                  <li>Quiz0: (9/9)</li>
+                  <li>Quiz1: </li>
+                  <li>Quiz2: </li>
+                  <li>Quiz3: </li>
+                  <li>Quiz4: </li>
+                  <li>Quiz5: </li>
+                  <li>Quiz6: </li>
+                  <li>Quiz7: </li>
+                  <li>Quiz8: </li>
+                  <li>Quiz9: </li>
+                  <li>Quiz10: </li>
+                  <li>Quiz11: </li>
+                  <li>Quiz12: </li>
+               </ul>
+            </div>
          </div>
          <div id="dic_tab" style="display:none">
             <p>Data Intensive Computing</p>
