--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <p>Weekly Review</p>
             <button onclick="mec_oic()">Ongoing in class</button>
             <button onclick="mec_ss()">Self study</button>
-            <button onclick="mec_final()">Resources</button>
+            <button onclick="mec_res()">Resources</button>
             <button onclick="mec_ass()">Assignments</button>
             <button onclick="mec_pro()">Projects</button>
             <button onclick="mec_mid()">Mid Sem Exam</button>
