--- a/index.html
+++ b/index.html
@@ -171,16 +171,32 @@
             <button onclick="mec_pro()">Projects</button>
             <button onclick="mec_mid()">Mid Sem Exam</button>
             <button onclick="mec_final()">Final Exam</button>
+            <div id="mec_oic" style="display:none;">
+               <p style="color:white;">Go through matrix cookbook in UB learns.</p>
+            </div>
+            <div id="mec_ss" style="display:none;">
+               <ul style="text-align:left; color:white;">
+                  <li>Machine learning with Python(Have to start)</li>
+               </ul>
+            </div>
+            <div id="mec_res" style="display:none;">
+            </div>
+            <div id="mec_pro" style="display:none;">
+            </div>
+            <div id="mec_mid" style="display:none;">
+            </div>
+            <div id="mec_final" style="display:none;">
+            </div>
             <div id="mec_ass" style="display:none;">
-               <h6 style="color:white">Assignments</h6>
-               <ul style="text-align:left;">
+               <h5 style="color:white">Assignments</h5>
+               <ul style="text-align:left; color:white;">
                   <li>Assignment1: </li>
                   <li>Assignment2: </li>
                   <li>Assignment3: </li>
                </ul>
                </br>
-            <h6 style="color:white">Weekly Quiz</h6>
-               <ul style="text-align:left;">
+            <h5 style="color:white">Weekly Quiz</h5>
+               <ul style="text-align:left; color:white;">
                   <li>Quiz0: (9/9)</li>
                   <li>Quiz1: </li>
                   <li>Quiz2: </li>
@@ -270,11 +286,21 @@
             <p>This includes personal study material regarding both academic and entertainment.</p>
          </div>
          <div id="unitopic" style="display:none">
-            <h3>Unique Topics</h3>
-            <ul>
-               <li>Text analysis.(Checkout 'quanteda' package in R)</li>
-               <li>Scikit learn library in Python</li>
-            </ul>
+            <h3 style="color:white">Unique Topics</h3>
+            <button onclick="ss_dm()">Data Mining topics</button>
+            <button onclick="ss_ml()">Machine Learning topics</button>
+            <div id="ss_ml">
+               <ul style="text-align:left; color:white;">
+                  <li>Machine learning for Python.</li>
+                  <li>Scikit learn library in Python</li>
+               </ul>
+            </div>
+            <div id="ss_dm">
+               <ul style="text-align:left; color:white;">
+                  <li>Regression trees in An introduciton to statistical learning.</li>
+                  <li>Text analysis.(Checkout 'quanteda' package in R)</li>
+               </ul>
+            </div>
          </div>
          <div id="corbooksid" style="display:none">
             <h3>Good books for academics and learning</h3>
