--- a/index.html
+++ b/index.html
@@ -289,13 +289,13 @@
             <h3 style="color:white">Unique Topics</h3>
             <button onclick="ss_dm()">Data Mining topics</button>
             <button onclick="ss_ml()">Machine Learning topics</button>
-            <div id="ss_ml">
+            <div id="ss_ml" style="display:none;">
                <ul style="text-align:left; color:white;">
                   <li>Machine learning for Python.</li>
                   <li>Scikit learn library in Python</li>
                </ul>
             </div>
-            <div id="ss_dm">
+            <div id="ss_dm" style="display:none;">
                <ul style="text-align:left; color:white;">
                   <li>Regression trees in An introduciton to statistical learning.</li>
                   <li>Text analysis.(Checkout 'quanteda' package in R)</li>
