--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
          <div id="dic_tab" style="display:none">
             <p>Data Intensive Computing</p>
             <p>Weekly Review</p>
+            <p href="https://cse.buffalo.edu/~bina/cse487/spring2019/index.htmlter">Course link</p>
             <div id="dicss">
                <ul>
                   <p>Week1:</p>
@@ -244,7 +245,7 @@
                <h3 style="color:white;">Week:2(Self study)</h3>
                <ul style="color:white; text-align:left;">
                   <li>Research papers Arules and bump hunting.</li>
-                  <li>Chapter 14(Association rules), CART chapter Introduction to statistical Learning.</li>
+                  <li href="https://www.statmethods.net/advstats/cart.html">Chapter 14(Association rules), CART chapter Introduction to statistical Learning.</li>
                   <li>CART chapter revise</li>
                   <li>T tests, AIC, BIC, Bagging, Boosting, Bootstrapping.</li>
                   <li>Netflix datascience positions.</li>
