--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
          <div id="dic_tab" style="display:none">
             <p>Data Intensive Computing</p>
             <p>Weekly Review</p>
+            <a href="https://cse.buffalo.edu/~bina/cse487/spring2019/index.htmlter">Course link(DIC)</a>
             <div id="dicss">
                <ul>
                   <p>Week1:</p>
