Links and courses
Course Resources

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
          <div id="dic_tab" style="display:none">
             <p>Data Intensive Computing</p>
             <p>Weekly Review</p>
-            <a href="https://cse.buffalo.edu/~bina/cse487/spring2019/index.htmlter">Course link(DIC)</a>
+            <a href="https://cse.buffalo.edu/~bina/cse487/spring2019/index.html">Course link(DIC)</a>
             <div id="dicss">
                <ul>
                   <p>Week1:</p>
@@ -278,8 +278,9 @@
       <div id="selfStudy" class="tabcontent box">
          <div class="sidenav">
             <a href="#" onclick="home_ss()">Home</a>
-            <a href="#" onclick="uni_topic()">Unique Topics</a>
+            <a href="#" onclick="courses()">Courses</a>
             <a href="#" onclick="corbooks()">Course Books</a>
+            <a href="#" onclick="uni_topic()">Unique Topics</a>
             <a href="#" onclick="art_pap()">Papers and articles</a>
          </div>
          <div id="homess">
@@ -290,26 +291,24 @@
             <h3 style="color:white">Unique Topics</h3>
             <button onclick="ss_dm()">Data Mining topics</button>
             <button onclick="ss_ml()">Machine Learning topics</button>
-<<<<<<< HEAD
+
             <div id="ss_ml" style="display:none;">
-=======
-            <div id="ss_ml">
->>>>>>> a3183b2ba1e544d625b878ed855bc149a982d1ef
                <ul style="text-align:left; color:white;">
                   <li>Machine learning for Python.</li>
                   <li>Scikit learn library in Python</li>
                </ul>
             </div>
-<<<<<<< HEAD
+
             <div id="ss_dm" style="display:none;">
-=======
-            <div id="ss_dm">
->>>>>>> a3183b2ba1e544d625b878ed855bc149a982d1ef
                <ul style="text-align:left; color:white;">
                   <li>Regression trees in An introduciton to statistical learning.</li>
                   <li>Text analysis.(Checkout 'quanteda' package in R)</li>
                </ul>
             </div>
+         </div>
+         <div id="courses" style="display:none;">
+            <h3 style="color:white;">Resources available</h3>
+            <a href="https://github.com/owainlewis/awesome-artificial-intelligence" style="color:white;">Awesome Artifcial Intelligence in Github</a>
          </div>
          <div id="corbooksid" style="display:none">
             <h3>Good books for academics and learning</h3>
