--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
             <div id="mec_mid" style="display:none;">
             </div>
             <div id="mec_final" style="display:none;">
+               <h3 style="color:white;"> Final Exam : 14-May-2019</h3>
             </div>
             <div id="mec_ass" style="display:none;">
                <h5 style="color:white">Assignments</h5>
@@ -242,9 +243,13 @@
             <button onclick="sdm_mid()">Mid Sem Exam</button>
             <button onclick="sdm_final()">Final Exam</button>
             <div id="sdm_ss" style="display:none;">
+               <h3 style="color:white;">Week:3(Self study)</h3>
+               <ul style="color:white; text-align:left;">
+                  <li>Learn usage of Arules package.</li>
+               </ul>
                <h3 style="color:white;">Week:2(Self study)</h3>
                <ul style="color:white; text-align:left;">
-                  <li>Research papers Arules and bump hunting.</li>
+                  <li>Research papers Arules and bump hunting. &#10003;</li>
                   <li href="https://www.statmethods.net/advstats/cart.html">Chapter 14(Association rules), CART chapter Introduction to statistical Learning.</li>
                   <li>CART chapter revise</li>
                   <li>T tests, AIC, BIC, Bagging, Boosting, Bootstrapping.</li>
@@ -268,8 +273,8 @@
             <div id="dmq_ss" style="display:none;">
                <h3>Week:2</h3>
                <ul>
-                  <li>Research papers Arules and bump hunting.</li>
-                  <li>Chapter1, data models and layers.</li>
+                  <li>Chapter1: Data Models.</li>
+                  <li>Oracle Database Managment System usage</li>
                </ul>
             </div>
          </div>
