--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
          <div id="sdm_tab" style="display:none">
             <h2 style="color:white;">Statistical Data Mining</h2>
             <p>Weekly Review</p>
+            <p style="color:white;">TA office hours : Tue - Thurs (11am to 1pm- Bell 250) </p>
             <button onclick="sdm_oic()">Ongoing in class</button>
             <button onclick="sdm_ss()">Self study</button>
             <button onclick="sdm_final()">Resources</button>
